syntax = "proto3";

option go_package = "gen-proto/booking_pb;booking_pb";

service BookingService {
    rpc CreateBookings(NewBookingParam) returns (Empty);
    rpc DeleteBookingsById (DeleteBookingByIdRequest) returns (Empty);
    rpc DeleteBookingsByIds (DeleteBookingByIdsRequest) returns (Empty);
    rpc GetBookingsByUserId (GetBookingsByUserIdRequest) returns (GetBookingsByUserIdResponse);
    rpc GetNumberOfOccupiedRooms(GetNumberOfOccupiedRoomsRequest) returns (GetNumberOfOccupiedRoomsResponse);
    rpc GetNumberOfOccupiedRoomsByHotelIds(GetNumberOfOccupiedRoomsByHotelIdsRequest) returns (GetNumberOfOccupiedRoomsByHotelIdsResponse);
    rpc GetUnavailableRoomsByRoomTypeId(GetUnavailableRoomsByRoomTypeIdRequest) returns (GetUnavailableRoomsByRoomTypeIdResponse);
}

message Empty {}

message Booking {
    string id = 1;
    string check_in = 2;
    string check_out = 3;
    int32 total = 4;
    string status = 5;
    string hotel_id = 6;
    string user_id = 7;
    string room_type_id = 8;
    string room_id = 9;
}

message BookingParam {
    string check_in = 1;
    string check_out = 2;
    int32  total = 3;
    string room_type_id = 4;
    string user_id = 5;
    string room_id = 6;
}

message NewBookingParam {
    repeated BookingParam new_bookings = 1;
}

message DeleteBookingByIdRequest {
    string booking_id = 1;
}

message DeleteBookingByIdsRequest {
    repeated string booking_ids = 1;
}

message GetBookingsByUserIdRequest {
    string user_id = 1;
    string check_date_start = 2;
    string check_date_end = 3;
    int32 size = 4;
    int32 offset = 5;
}

message GetBookingsByUserIdResponse{
    repeated Booking bookings = 1;
}

message GetNumberOfOccupiedRoomsRequest {
    repeated string room_type_ids = 1;
    string check_in = 2;
    string check_out = 3;
}

message ResultNumberOfOccupiedRooms {
    string room_type_id = 1;
    int32 number_of_occupied_rooms = 2;
}

message GetNumberOfOccupiedRoomsResponse {
    repeated ResultNumberOfOccupiedRooms results = 1;
}

message GetNumberOfOccupiedRoomsByHotelIdsRequest {
    repeated string hotel_ids = 1;
    string check_in = 2;
    string check_out = 3;
}

message ResultNumberOfOccupiedRoomsByHotelIds {
    string room_type_id = 1;
    int32 number_of_occupied_rooms = 2;
}

message GetNumberOfOccupiedRoomsByHotelIdsResponse {
    repeated ResultNumberOfOccupiedRoomsByHotelIds results = 1;
}

message GetUnavailableRoomsByRoomTypeIdRequest{
    string room_type_id = 1;
    string check_in = 2;
    string check_out = 3;
}

message GetUnavailableRoomsByRoomTypeIdResponse{
    repeated string room_ids = 1;
}